[gd_scene load_steps=6 format=3 uid="uid://ckpjp6e0tpuyg"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_rwa4q"]
[ext_resource type="Texture2D" uid="uid://cu4r67strdgsd" path="res://graphics/effects/effect_yellow.png" id="2_1uglp"]
[ext_resource type="Texture2D" uid="uid://0pd8ynv0tj0g" path="res://graphics/ships/ship_G.png" id="4_o3n3q"]
[ext_resource type="AudioStream" uid="uid://bxhet1ot4ja0e" path="res://audio/laserLarge_000.ogg" id="6_tgkae"]
[ext_resource type="AudioStream" uid="uid://cgmk6kawei21d" path="res://audio/thrusterFire_001.ogg" id="7_81ix7"]

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_rwa4q")

[node name="FireSprite" type="Sprite2D" parent="."]
position = Vector2(0, 28)
rotation = -3.14159
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_1uglp")

[node name="PlayerSprite" type="Sprite2D" parent="."]
texture = ExtResource("4_o3n3q")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
build_mode = 1
polygon = PackedVector2Array(0, -24, -25, 16, -16, 24, -8, 16, 8, 16, 15, 24, 24, 16)

[node name="LaserStartMarker" type="Marker2D" parent="."]
position = Vector2(0, -43)
gizmo_extents = 0.0

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="LaserSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_tgkae")

[node name="EngineSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_81ix7")

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
